Option to add bookmark

--- a/data/settings.html
+++ b/data/settings.html
@@ -46,6 +46,7 @@
     width:100%;
     padding:10px;
     font-size:1.4em;
+    font-family: 'Roboto Condensed';
   }
   .option:hover {
     background-color:rgb(250,250,250);
@@ -61,6 +62,7 @@
   </div>
     <div id='options-list'>
       <!--<button class='option' id='sp-add'><i class='fa fa-plus'></i> Add a bookmark</button>-->
+      <button class='option' id='sp-add'><i class='fa fa-plus'></i>  Add this website</button>
       <button class='option' id='sp-edit'><i class='fa fa-pencil'></i>  Edit your startpage</button>
       <button class='option' id='reload'><i class='fa fa-repeat'></i>  Use another startpage</button>
       <p style="font-family:'Roboto Condensed';font-style:italic;text-align:center;"> OR CONTRIBUTE BY :</p>
