--- a/data/start.html
+++ b/data/start.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:700,400' rel='stylesheet' type='text/css'>
   <script src='main.js'></script>
   <style>
   body {
